reworked player state logic \n - should work now with KDE player widget (DBus integration added, WIP)